# triangel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.cargo/: config.toml
firmware/: README.md
firmware/ear/: Cargo.toml  README.md
firmware/ear/src/: audio.rs  eye.code-workspace  main.rs  mel.rs  uart_out.rs
firmware/ear/src/cmds/: test.rs
firmware/eye/: Cargo.toml  PATTERNS.md  README.md
firmware/eye/src/: audio.rs  cmds.rs  main.rs  pins.rs  setlist.rs
firmware/eye/src/input/: buttons.rs  ir.rs  mod.rs
firmware/eye/src/led/: map.rs  mod.rs
firmware/eye/src/patterns/: audio_fill.rs  mod.rs  rainbow.rs  ripple.rs  scan.rs  shimmer.rs
firmware/shared/: Cargo.toml  README.md
firmware/shared/src/: mel.rs
hardware/controller/: components.kicad_sch  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch
hardware/footprints/: ProLib_pcs_2026-05-15.elibz  ProLib_pcs_2026-05-26.elibz  ProLib_pcs_2026-05-31.elibz
hardware/scripts/: copper_zone_inner.py  inner_triangle_guide.py  make_10cm_triangle.py  place_R_and_J.py  place_capacitors.py  place_leds.py  place_mounting_holes.py
hardware/triangle/: triangle.kicad_pcb  triangle.kicad_prl  triangle.kicad_pro  triangle.kicad_sch  ~triangle.kicad_pro.lck
triangel previewer/: README.md  animation.js  bridge.config.json  bridge.js  ear_sim.py  generate_map.js  index.html  led_map.js  package.json
triangel previewer/.claude/: settings.local.json
