[package]
name = "ear"
version = "0.1.0"
edition = "2021"

[dependencies]
utralib = { version = "0.1.27", optional = true, default-features = false }
xous-names = { package = "xous-api-names", version = "0.9.71" }
ticktimer = { package = "xous-api-ticktimer", version = "0.9.70" }
xous = "0.9.70"
log-server = { package = "xous-api-log", version = "0.1.69" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
bao1x-hal = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef", features = ["std"] }
bao1x-api = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef" }
bao1x-hal-service = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef" }
bao1x-emu = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef", optional = true }
usb-bao1x = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef" }
bytemuck = "1.24.0"

aes = { git = "https://github.com/betrusted-io/xous-core", rev = "8dd5e5ec0024df91fd89d37bdca4a6c66280d6ef", default-features = false, optional = true }

# hid bringup
xous-usb-hid = { git = "https://github.com/betrusted-io/xous-usb-hid.git", branch = "main", optional = true }

triangel-shared = { path = "../shared" }
rustfft = "6"

[patch.crates-io]
getrandom = { git = "https://github.com/betrusted-io/xous-core", rev = "b439d312a45479419fb8853481ce92269eecf7ff" }

# aes testing
[features]
bao1x = ["utralib/bao1x", "usb-bao1x/bao1x", "aes/bao1x"]
board-dabao = [
    "bao1x-hal-service/board-dabao",
    "bao1x-hal/board-dabao",
    "usb-bao1x/board-dabao",
]
usb = []
uart-audio = ["usb"]
aestests = ["aes"]
default = ["bao1x", "board-dabao"]
