[package]
name = "eye"
version = "0.1.0"
edition = "2021"

[dependencies]
utralib = { version = "0.1.27", optional = true, default-features = false }
xous-names = { package = "xous-api-names", version = "0.9.71" }
ticktimer = { package = "xous-api-ticktimer", version = "0.9.70" }
xous = "0.9.70"
log-server = { package = "xous-api-log", version = "0.1.69" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
bao1x-hal = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231", features = ["std"], optional = true }
bao1x-api = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231" }
bao1x-hal-service = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231", optional = true }
bao1x-emu = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231", optional = true }
usb-bao1x = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231" }
bytemuck = "1.24.0"

aes = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231", default-features = false, optional = true }

# hid bringup
xous-usb-hid = { git = "https://github.com/betrusted-io/xous-usb-hid.git", branch = "main", optional = true }

bio-lib = { git = "https://github.com/betrusted-io/xous-core", rev = "0b3b4813225247e152d3927370bb5f53bc656231" }
arbitrary-int = "1.2"
triangel-shared = { path = "../shared" }

[patch.crates-io]
getrandom = { git = "https://github.com/betrusted-io/xous-core", rev = "b439d312a45479419fb8853481ce92269eecf7ff" }

# aes testing
[features]
bao1x = ["utralib/bao1x", "usb-bao1x/bao1x", "aes/bao1x"]
board-dabao = [
    "bao1x-hal-service/board-dabao",
    "bao1x-hal/board-dabao",
    "usb-bao1x/board-dabao",
    "bio-lib/ws2812",
    "bio-lib/captouch",
]
# Send frames to the browser previewer via USB serial instead of real WS2812 LEDs.
# Use this when developing without triangle boards connected.
previewer = ["usb"]
# Enable the interactive bringup shell (hardware debugging).
bringup = ["usb", "bio-math-test", "bio-wheel-test"]
bio-math-test = ["bio-lib/c-math-test"]
bio-wheel-test = ["bio-lib/c-colorwheel"]
usb = []
aestests = ["aes"]
default = ["bao1x", "board-dabao"]
